--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
   "dependencies": {
     "expo": "^47.0.0",
+    "expo-font": "^11.0.1",
+    "lodash.mergewith": "^4.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
