--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "expo": "^47.0.0",
+    "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
     "lodash.mergewith": "^4.6.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-safe-area-context": "^4.5.0",
-    "react-native-vector-icons": "^9.2.0",
+    "react-native-reanimated": "2.12.0",
+    "react-native-gesture-handler": "2.5.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
