--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "@expo/config": "^7.0.3",
+    "@gorhom/bottom-sheet": "^4",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
+    "dotenv": "^16.0.3",
     "expo": "^47.0.0",
     "expo-dev-client": "~2.0.1",
     "expo-font": "^11.0.1",
@@ -7,17 +12,22 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-reanimated": "2.12.0",
+    "react-native-auth0": "^2.16.0",
     "react-native-gesture-handler": "2.5.0",
+    "react-native-reanimated": "2.12.0",
     "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@types/lodash.merge": "^4.6.7",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
-    "typescript": "^4.6.3"
+    "@types/react-native-auth0": "^2.14.1",
+    "lodash.merge": "^4.6.2",
+    "typescript": "*"
   },
   "scripts": {
     "start": "expo start",
