--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,10 @@
 {
-  "compilerOptions": {},
+  "compilerOptions": {
+    "strict": true,
+    "skipLibCheck": true,
+    "paths": {
+      "src/*": ["./src/*"]
+    }
+  },
   "extends": "expo/tsconfig.base"
 }
